--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
     <script>
         let a = Number(prompt("Enter your first number please 😊:")) ;      // taking first input from user
-        let b = Number(prompt("Enter your second number please 😊:"));      // taking second input from user
-        // alert(`Sum of ${a} and ${b} is ${a+b}`)
+        let b = Number(prompt("Enter your second number please 😊:"));     // taking second input from user
+        console.log(a+b)
         let para=document.getElementsByTagName("p");
         para[0].innerText=`Sum of ${a} and ${b} is ${a+b} 😊`;            // displaying sum of two numbers
     </script>
 </body>
 
 </html>
+
